--- a/tp2/views/forms/form-attachment.html
+++ b/tp2/views/forms/form-attachment.html
@@ -47,6 +47,11 @@
     </select><br>
   </p>
 
+  <p>
+    <label for="diagnosis">Diagnóstico</label>
+    <input type="file" name="diagnosis" accept=".jpg,.png" multiple>
+  </p>
+
 </fieldset>
 
 <fieldset>
