Merge, cositas de estructura

--- a/tp2/views/forms/form-attachment.html
+++ b/tp2/views/forms/form-attachment.html
@@ -49,7 +49,7 @@
 
   <p>
     <label for="diagnosis">Diagnóstico</label>
-    <input type="file" name="diagnosis" accept=".jpg,.png" multiple>
+    <input type="file" name="personalImage" id="personalImage" accept=".jpg,.png">
   </p>
 
 </fieldset>
