--- a/tp2/statics/css/main.css
+++ b/tp2/statics/css/main.css
@@ -1,23 +1,17 @@
 body {
   background: white;
+  margin: 0 auto;
 }
 
-header {
-  max-width: 1024px;
+header, footer {
   margin: auto;
   background: lightskyblue;
-  padding: 10px;
+  padding: 16px;
 }
 
 /* Nav styles */
 
-nav.main-nav ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-}
+/*
 
 nav.main-nav ol li a {
   display: block;
@@ -26,12 +20,42 @@ nav.main-nav ol li a {
   text-decoration: none;
 }
 
+
+
+} */
+
+
+nav.main-nav li {
+  display: inline;
+}
+
+nav.main-nav ol {
+  list-style-type: none;
+  margin: 0 auto;
+  width: 50%;
+
+}
+
+nav.main-nav li a {
+    font-family: Arial;
+    font-size: 16px;
+    text-decoration: none;
+    color: #fff;
+    padding: 12px 32px;
+    text-decoration: none;
+    background-color: #2175bc;
+ }
+
+.active {
+  background-color: #8D9E8D;
+  color: white;
+}
 nav.main-nav ol li a:hover {
   background-color: #555;
   color: white;
 }
 
-.active {
-  background-color: #8D9E8D;
-  color: white;
+footer {
+  bottom: 0;
+  height: 50px;
 }
