--- a/tp2/statics/css/main.css
+++ b/tp2/statics/css/main.css
@@ -1,3 +1,5 @@
+@import url(reset.css);
+
 body {
   background: white;
   margin: 0 auto;
@@ -12,6 +14,29 @@ header, footer {
 
 h1, h2 {
   text-align: center;
+}
+
+h1 {
+  font-size: 3em;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 2.3em;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 1.9em;
+}
+
+legend {
+  font-size: 2em;
+  font-weight: 700;
+}
+
+p {
+  margin: 8px 0;
 }
 
 /* Nav styles */
@@ -29,6 +54,9 @@ nav.main-nav ol li a {
 
 } */
 
+nav.main-nav {
+    padding: 5vh 0;
+}
 
 nav.main-nav li {
   display: inline;
@@ -104,11 +132,17 @@ form {
 table {
   border-collapse: collapse;
   width: 100%;
+  margin: 10vh 0;
 }
 
 th, td {
   text-align: left;
   padding: 8px;
 }
-
+tr:nth-child(1) {
+  font-size: 1.1em;
+  font-weight: 600;
+  border: 1px solid;
+  background-color: #d0edff24;
+}
 tr:nth-child(even) {background-color: #f2f2f2;}
